--- a/templates/single.html
+++ b/templates/single.html
@@ -14,11 +14,11 @@
 
                 <!-- wp:post-terms {"term":"category","fontSize":"tiny","style":{"typography":{"fontWeight":"500","letterSpacing":"1px","textTransform":"uppercase","lineHeight":"1"}}} /-->
 
-                <!-- wp:paragraph {"textColor":"borders","fontSize":"tiny","fontFamily":"source-sans"} -->
-                <p class="has-borders-color has-tiny-font-size has-source-sans-font-family">|</p>
+                <!-- wp:paragraph {"textColor":"neutral-300","fontSize":"tiny","fontFamily":"source-sans"} -->
+                <p class="has-neutral-300-color has-tiny-font-size has-source-sans-font-family">|</p>
                 <!-- /wp:paragraph -->
 
-                <!-- wp:post-date {"format":"F j, Y","style":{"typography":{"letterSpacing":"1px","textTransform":"uppercase","fontWeight":"500","lineHeight":"1"}},"textColor":"tertiary","className":"no-flex-shrink","fontSize":"tiny"} /-->
+                <!-- wp:post-date {"format":"F j, Y","style":{"typography":{"letterSpacing":"1px","textTransform":"uppercase","fontWeight":"500","lineHeight":"1"}},"textColor":"primary-light","className":"no-flex-shrink","fontSize":"tiny"} /-->
 
             </div>
             <!-- /wp:group -->
@@ -109,4 +109,4 @@
 </main>
 <!-- /wp:group -->
 
-<!-- wp:template-part {"slug":"footer","tagName":"footer","style":{"spacing":{"padding":{"top":"var(--wp--custom--spacing--large, 8rem)","right":"var(--wp--custom--spacing--small, 1.25rem)","left":"var(--wp--custom--spacing--small, 1.25rem)"}}},"layout":{"inherit":true}} /-->
+<!-- wp:template-part {"slug":"footer","theme":"nautilus","tagName":"footer"} /-->
