--- a/assets/blocks/separator.css
+++ b/assets/blocks/separator.css
@@ -32,19 +32,20 @@
 --------------------------------------------- */
 
 .wp-block-separator.is-style-waves {
+    background-color: unset !important;
     border: 0;
-    height: 10px;
+    height: 10px !important;
     width: 100% !important;
 }
 
 .wp-block-separator.is-style-waves:after {
+    background-color: currentColor;
     content: "";
     display: block;
-    width: 100%;
     height: 100%;
-    background-color: var(--wp--preset--color--foreground);
-    mask-image: url( '../images/waves.svg' );
+    width: 100%;
     -webkit-mask-image: url( '../images/waves.svg' );
+    mask-image: url( '../images/waves.svg' );
     -webkit-mask-position: center;
     mask-position: center;
     -webkit-mask-repeat: no-repeat;
