--- a/templates/404.html
+++ b/templates/404.html
@@ -1,6 +1,6 @@
-<!-- wp:template-part {"slug":"header","tagName":"header"} /-->
+<!-- wp:template-part {"slug":"header","theme":"nautilus","tagName":"header"} /-->
 
-<!-- wp:group {"layout":{"inherit":true},"tagName":"main","style":{"spacing":{"margin":{"top":"0"}}}} -->
+<!-- wp:group {"tagName":"main","style":{"spacing":{"margin":{"top":"0"}}}} -->
 <main class="wp-block-group" style="margin-top:0">
 
 	<!-- wp:pattern {"slug":"nautilus/hidden-404"} /-->
