--- a/assets/blocks/quote.css
+++ b/assets/blocks/quote.css
@@ -1,3 +1,8 @@
+/* Quote
+----------------------------------------------------------------------------- */
+
+/* General Styles
+--------------------------------------------- */
 
 @media (min-width: 800px) {
     .wp-block-post-content > .wp-block-quote {
