--- a/assets/blocks/tag-cloud.css
+++ b/assets/blocks/tag-cloud.css
@@ -16,16 +16,16 @@
 }
 
 .wp-block-tag-cloud a .tag-link-count {
-    color: var(--wp--preset--color--tertiary);
+    color: var(--wp--preset--color--neutral-500);
 }
 
 /* Block Style: Outline
 --------------------------------------------- */
 
 .wp-block-tag-cloud.is-style-outline a {
-    border: 1px solid var(--wp--preset--color--borders);
+    border: 1px solid var(--wp--preset--color--neutral-300);
     border-radius: var(--wp--custom--border-radius--normal);
-    color: var(--wp--preset--color--tertiary);
+    color: var(--wp--preset--color--primary-light);
     display: inline-block;
     font-size: var(--wp--preset--font-size--tiny) !important;
     font-weight: 400;
@@ -36,12 +36,12 @@
     text-transform: none;
 }
 
-.wp-block-tag-cloud.is-style-outline a:hover {
-    background-color: var(--wp--preset--color--foreground);
-    border-color: var(--wp--preset--color--foreground);
-    color: var(--wp--preset--color--background);
+.wp-block-tag-cloud.is-style-outline a .tag-link-count {
+    color: currentColor;
 }
 
-.wp-block-tag-cloud.is-style-outline a:hover .tag-link-count {
-    color: var(--wp--preset--color--borders);
+.wp-block-tag-cloud.is-style-outline a:hover {
+    background-color: var(--wp--preset--color--primary);
+    border-color: var(--wp--preset--color--primary);
+    color: var(--wp--preset--color--neutral);
 }
