--- a/assets/blocks/post-comments-form.css
+++ b/assets/blocks/post-comments-form.css
@@ -1,4 +1,5 @@
-/* Post Featured Image
+/* Post Comments Form
+ * (Currently not used until the Comments Loop is more stable)
 ----------------------------------------------------------------------------- */
 
 /* General Styles
