--- a/style.css
+++ b/style.css
@@ -220,6 +220,44 @@ body > .is-root-container > .wp-block-template-part > .wp-block-cover, */
 	padding-left: var(--wp--custom--spacing--outer);
 }
 
+
+/* Experimental Styles
+--------------------------------------------- */
+
+/*
+ * Remove bottom margin when blocks are placed in container blocks that do not
+ * support blockGap (i.e. Column, Cover, Media & Text)
+ */
+h1:last-child,
+h2:last-child,
+h3:last-child,
+h4:last-child,
+h5:last-child,
+h6:last-child,
+p:last-child,
+.wp-block-image:last-child {
+	margin-bottom: 0;
+}
+
+/* .is-root-container h1 + *,
+.is-root-container h2 + *,
+.is-root-container h3 + *,
+.is-root-container h4 + *,
+.is-root-container h5 + *,
+.is-root-container h6 + *,
+.wp-block-post-content h1 + *,
+.wp-block-post-content h2 + *,
+.wp-block-post-content h3 + *,
+.wp-block-post-content h4 + *,
+.wp-block-post-content h5 + *,
+.wp-block-post-content h6 + * {
+	margin-top: 10px !important;
+} */
+
+.wp-block-spacer + * {
+	margin-top: 0 !important;
+}
+
 /*
  * Utility styles.
  * A couple utilities that are used throughout patterns and parts
