--- a/templates/no-title.html
+++ b/templates/no-title.html
@@ -13,6 +13,10 @@
 
 	<!-- wp:post-content {"layout":{"inherit":true}} /-->
 
+    <!-- wp:spacer {"height":"6rem"} -->
+    <div style="height:6rem" aria-hidden="true" class="wp-block-spacer"></div>
+    <!-- /wp:spacer -->
+
 </main>
 <!-- /wp:group -->
 
