--- a/templates/page.html
+++ b/templates/page.html
@@ -15,6 +15,10 @@
 
     <!-- wp:post-content {"layout":{"inherit":true}} /-->
 
+    <!-- wp:spacer {"height":"6rem"} -->
+    <div style="height:6rem" aria-hidden="true" class="wp-block-spacer"></div>
+    <!-- /wp:spacer -->
+
 </main>
 <!-- /wp:group -->
 
