--- a/templates/page-has-title.html
+++ b/templates/page-has-title.html
@@ -3,15 +3,17 @@
 <!-- wp:group {"tagName":"main","style":{"spacing":{"margin":{"top":"0"}}}} -->
 <main class="wp-block-group" style="margin-top:0">
 
-    <!-- wp:group {"layout":{"inherit":true}} -->
-    <div class="wp-block-group">
+    <!-- wp:group {"layout":{"contentSize": "720px","wideSize": "960px"},"style":{"spacing":{"blockGap":"3rem","margin":{"top":"4rem","bottom":"3rem"}}}} -->
+    <div class="wp-block-group" style="margin-top:4rem;margin-bottom:3rem">
 
-        <!-- wp:post-featured-image {"align":"wide","style":{"spacing":{"margin":{"bottom":"3rem"}}}} /-->
+        <!-- wp:post-title {"level":1} /-->
+
+        <!-- wp:post-featured-image {"align":"wide"} /-->
 
     </div>
     <!-- /wp:group -->
 
-	<!-- wp:post-content {"layout":{"inherit":true}} /-->
+    <!-- wp:post-content {"layout":{"inherit":true}} /-->
 
     <!-- wp:spacer {"height":"6rem"} -->
     <div style="height:6rem" aria-hidden="true" class="wp-block-spacer"></div>
