--- a/assets/blocks/separator.css
+++ b/assets/blocks/separator.css
@@ -11,6 +11,7 @@
 /* Block Style: Wide
 --------------------------------------------- */
 
+/* This fixes the block style "collapsing" in Row blocks. */
 .wp-block-separator.is-style-wide {
     width: 100%;
 }
