--- a/assets/blocks/quote.css
+++ b/assets/blocks/quote.css
@@ -4,15 +4,14 @@
 /* General Styles
 --------------------------------------------- */
 
-@media (min-width: 800px) {
-    .wp-block-post-content > .wp-block-quote {
-        margin-top: calc(1.5 * var(--wp--style--block-gap));
-        margin-bottom: calc(1.5 * var(--wp--style--block-gap));
-    }
+.wp-block-quote {
+    border-left: 2px solid var(--wp--preset--color--secondary);
+    padding: 0.5rem 0 0.5rem 2rem;
 }
 
-.wp-block-quote {
-    border-left: 1px solid var(--wp--preset--color--neutral-300);
+/* If contained in a block with a background color, default to currentColor */
+.has-background .wp-block-quote {
+    border-color: currentColor;
 }
 
 .wp-block-quote p {
@@ -20,12 +19,64 @@
 }
 
 .wp-block-quote cite {
-	color: var(--wp--preset--color--primary-light);
+	color: currentColor;
     display: inline-block;
     font-weight: 500;
 	font-size: var(--wp--preset--font-size--tiny);
 	letter-spacing: 1px;
     line-height: 1;
     margin-top: 1.5rem;
+    opacity: .6;
     text-transform: uppercase;
+}
+
+@media (min-width: 800px) {
+    .editor-styles-wrapper .block-editor-block-list__layout.is-root-container > .wp-block-quote,
+    .wp-block-post-content > .wp-block-quote {
+        margin-top: calc(1.5 * var(--wp--style--block-gap));
+        margin-bottom: calc(1.5 * var(--wp--style--block-gap));
+    }
+}
+
+/* Block Style: Plain
+--------------------------------------------- */
+.wp-block-quote.is-style-plain {
+    padding: 0;
+}
+
+/* Block Style: Fancy
+--------------------------------------------- */
+
+.wp-block-quote.is-style-fancy {
+    border: 0;
+    padding: 3.5rem 0 0.5rem 0;
+    position: relative;
+}
+
+.wp-block-quote.is-style-fancy:before {
+    color: var(--wp--preset--color--secondary);
+    content: "“";
+    font-size: 6rem;
+    font-style: italic;
+    font-weight: 600;
+    line-height: 0;
+    position: absolute;
+    top: 3rem;
+    left: calc(50% - 2.75rem);
+}
+
+@media ( min-width: 800px ) {
+    .wp-block-quote.is-style-fancy {
+        padding: 1rem 0 0.5rem 3.25rem;
+    }
+
+    .wp-block-quote.is-style-fancy:before {
+        left: -0.5rem;
+    }
+}
+
+/* If contained in a block with a background color, default to currentColor */
+.has-background .wp-block-quote.is-style-fancy:before {
+    color: currentColor;
+    opacity: 0.4;
 }
