--- a/assets/blocks/quote.css
+++ b/assets/blocks/quote.css
@@ -5,13 +5,10 @@
 --------------------------------------------- */
 
 .wp-block-quote {
-    border-left: 2px solid var(--wp--preset--color--secondary);
-    padding: 0.5rem 0 0.5rem 2rem;
-}
-
-/* If contained in a block with a background color, default to currentColor */
-.has-background .wp-block-quote {
-    border-color: currentColor;
+    border-top: 2px solid var(--wp--preset--color--secondary);
+    border-bottom: 2px solid var(--wp--preset--color--secondary);
+    border-left: 0;
+    padding: 1.5rem 0 2rem 0;
 }
 
 .wp-block-quote p {
@@ -30,12 +27,24 @@
     text-transform: uppercase;
 }
 
-@media (min-width: 800px) {
+@media (min-width: 600px) {
     .editor-styles-wrapper .block-editor-block-list__layout.is-root-container > .wp-block-quote,
     .wp-block-post-content > .wp-block-quote {
         margin-top: calc(1.5 * var(--wp--style--block-gap));
         margin-bottom: calc(1.5 * var(--wp--style--block-gap));
     }
+
+    .wp-block-quote {
+        border-top: 0;
+        border-bottom: 0;
+        border-left: 2px solid var(--wp--preset--color--secondary);
+        padding: 0.5rem 0 0.5rem 2rem;
+    }
+}
+
+/* If contained in a block with a background color, default to currentColor */
+.has-background .wp-block-quote {
+    border-color: currentColor;
 }
 
 /* Block Style: Plain
@@ -65,7 +74,7 @@
     left: calc(50% - 2.75rem);
 }
 
-@media ( min-width: 800px ) {
+@media ( min-width: 600px ) {
     .wp-block-quote.is-style-fancy {
         padding: 1rem 0 0.5rem 3.25rem;
     }
