--- a/assets/blocks/group.css
+++ b/assets/blocks/group.css
@@ -4,11 +4,15 @@
 /* General Styles
 --------------------------------------------- */
 
-/*
- * Remove the auto-padding added to group blocks
- * with background colors applied.
- */
-
+/* Remove the auto-padding added to Groups with background colors applied. */
 .wp-block-group:where(.has-background) {
     padding: 0;
+}
+
+/*
+ * Fixes bug when a block is aligned left/right in Groups.
+ * Reference: https://github.com/WordPress/gutenberg/issues/39344
+ */
+.wp-block-group {
+    overflow: auto;
 }
