--- a/templates/404.html
+++ b/templates/404.html
@@ -3,7 +3,7 @@
 <!-- wp:group {"tagName":"main","style":{"spacing":{"margin":{"top":"0"}}}} -->
 <main class="wp-block-group" style="margin-top:0">
 
-	<!-- wp:pattern {"slug":"nautilus/404-tentacles"} /-->
+	<!-- wp:pattern {"slug":"nautilus/404"} /-->
 
 </main>
 <!-- /wp:group -->
