Fix wide separator in Row blocks.

--- a/assets/blocks/separator.css
+++ b/assets/blocks/separator.css
@@ -13,7 +13,7 @@
 
 /* This fixes the block style "collapsing" in Row blocks. */
 .wp-block-separator.is-style-wide {
-    width: 100%;
+    flex-grow: 1;
 }
 
 /* Block Style: Dots
