--- a/style.css
+++ b/style.css
@@ -202,8 +202,6 @@ span.required {
 .wp-block-navigation__responsive-container.is-menu-open {
 	padding: var(--wp--custom--spacing--outer);
 	padding-bottom: calc(2 * var(--wp--custom--spacing--outer));
-	padding-right: var(--wp--custom--spacing--outer);
-	padding-left: var(--wp--custom--spacing--outer);
 }
 
 
@@ -214,14 +212,12 @@ span.required {
  * Mock block spacing when blocks are placed in container blocks that do not
  * support blockGap (i.e. Column, Cover, Media & Text)
  */
-.wp-block-column > *,
 .wp-block-cover .wp-block-cover__inner-container > *,
 .wp-block-media-text .wp-block-media-text__content > * {
 	margin-top: var(--wp--custom--spacing--gap);
 	margin-bottom: 0;
 }
 
-.wp-block-column > *:first-child,
 .wp-block-cover .wp-block-cover__inner-container > *:first-child,
 .wp-block-media-text .wp-block-media-text__content > *:first-child {
 	margin-top: 0;
@@ -281,8 +277,16 @@ span.required {
     margin-top: 0 !important;
 }
 
+.height-100 {
+	height: 100%;
+}
+
 .items-start {
 	align-items: flex-start !important;
+}
+
+.justify-space-between {
+	justify-content: space-between !important;
 }
 
 .opacity-50 {
