--- a/templates/single.html
+++ b/templates/single.html
@@ -1,4 +1,35 @@
+<!-- wp:cover {"useFeaturedImage":true,"minHeight":33,"minHeightUnit":"vh","contentPosition":"bottom center","isDark":false,"className":"p-sm mt-0 featured-image","style":{"color":{"duotone":["#004D98","#dbffff"]}}} -->
+<div class="wp-block-cover is-light has-custom-content-position is-position-bottom-center p-sm mt-0 featured-image" style="min-height:33vh"><span aria-hidden="true" class="wp-block-cover__background has-background-dim-50 has-background-dim"></span><div class="wp-block-cover__inner-container">
+
+        <!-- wp:template-part {"slug":"header","tagName":"header"} /-->
+
+        <!-- wp:spacer {"height":"20vh"} -->
+        <div style="height:20vh" aria-hidden="true" class="wp-block-spacer"></div>
+        <!-- /wp:spacer -->
+
+		<!-- wp:group {"layout":{"inherit":true}} -->
+		<div class="wp-block-group">
+			<!-- wp:post-title {"textAlign":"center","level":1,"align":"wide","fontSize":"xx-large"} /-->
+
+			<!-- wp:group {"align":"wide","style":{"spacing":{"padding":{"bottom":"var(\u002d\u002dwp\u002d\u002dcustom\u002d\u002dspacing\u002d\u002dsmall, 1.25rem)"}}},"layout":{"type":"flex","allowOrientation":false,"justifyContent":"center"}} -->
+			<div class="wp-block-group alignwide"
+				style="padding-bottom:var(--wp--custom--spacing--small, 1.25rem)">
+				<!-- wp:post-date {"textColor":"accent-alt","fontSize":"small"} /-->
+			</div>
+			<!-- /wp:group -->
+		</div>
+		<!-- /wp:group -->
+</div></div><!-- /wp:cover -->
+
 <!-- wp:template-part {"slug":"header","tagName":"header"} /-->
+
+<!-- wp:cover {"useFeaturedImage":true,"dimRatio":50,"overlayColor":"secondary"} -->
+<div class="wp-block-cover">
+    <span aria-hidden="true" class="wp-block-cover__background has-secondary-background-color has-background-dim"></span>
+    <div class="wp-block-cover__inner-container"><!-- wp:paragraph {"align":"center","placeholder":"Write title…","fontSize":"large"} -->
+<p class="has-text-align-center has-large-font-size">Hello there</p>
+<!-- /wp:paragraph --></div></div>
+<!-- /wp:cover -->
 
 <!-- wp:group {"tagName":"main","style":{"spacing":{"margin":{"top":"0"}}}} -->
 <main class="wp-block-group" style="margin-top:0">
