--- a/style.css
+++ b/style.css
@@ -257,7 +257,7 @@ span.required {
 }
 
 /* Add a little separation, but allow blocks with margin control to override. */
-.block-editor-block-list__layout.is-root-container:not(.edit-site-block-editor__block-list) > *:first-child:not(.alignfull) {
+.block-editor-block-list__layout.is-root-container:not(.edit-site-block-editor__block-list):not(.is-outline-mode) > *:first-child:not(.alignfull) {
     margin-top: calc(2 * var(--wp--style--block-gap));
 }
 
@@ -267,6 +267,7 @@ span.required {
  * does not support these functionalities.
 ----------------------------------------------------------------------------- */
 
+/* Not used, check this */
 .my-0 {
 	margin-bottom: 0 !important;
 	margin-top: 0 !important;
@@ -277,24 +278,23 @@ span.required {
     margin-top: 0 !important;
 }
 
+/* Not used, check this */
 .height-100 {
 	height: 100%;
 }
 
+/* Not used, check this */
 .items-start {
 	align-items: flex-start !important;
 }
 
+/* Not used, check this */
 .justify-space-between {
 	justify-content: space-between !important;
 }
 
-.opacity-50 {
-	opacity: 0.5 !important;
-}
-
-.opacity-20 {
-	opacity: 0.2 !important;
+.flex-shrink-0 {
+	flex-shrink: 0;
 }
 
 @media (min-width: 781px) {
