--- a/assets/blocks/core/spacer.css
+++ b/assets/blocks/core/spacer.css
@@ -14,3 +14,29 @@
 .wp-block-spacer + * {
 	margin-top: 0 !important;
 }
+
+/*
+ * Utility classes for reducing the size of spacers on mobile.
+ */
+@media (max-width: 781px) {
+
+	.wp-block-spacer.mobile-0x-gap {
+		height: 0 !important;
+	}
+
+	.wp-block-spacer.mobile-1x-gap {
+		height: var(--wp--style--block-gap) !important;
+	}
+
+	.wp-block-spacer.mobile-2x-gap {
+		height: calc( 2 * var(--wp--style--block-gap) ) !important;
+	}
+
+	.wp-block-spacer.mobile-3x-gap {
+		height: calc( 3 * var(--wp--style--block-gap) ) !important;
+	}
+
+	.wp-block-spacer.mobile-4x-gap {
+		height: calc( 4 * var(--wp--style--block-gap) ) !important;
+	}
+}
